tests/models/String/fail/validate.rs
use dade::model;
#[model]
struct TestModel {
    #[field(validate = 2)]
    value: String,
}
fn main() {}
